public class CharacterClipAnims
{
    public const string DeathAnimName = "Death";
    public const string HitAnimName = "Hit";
    public const string CastAnimName = "Cast";
    public const string HealAnimName = "Heal";
    public const string AttackAnimName = "Attack";
    public const string RunAnimName = "Run";
}